--- a/more.html
+++ b/more.html
@@ -1,112 +1,116 @@
-
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewprot" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie-edge">
-		<script src="https://kit.fontawesome.com/34238d14b4.js" crossorigin="anonymous"></script>
-		<title>More | Kakao Clone</title>
-	</head>
-	<body>
-		<div class="status-bar">
-				<div class="status-bar__column">
-					<span class="status-bar__clock">13:53</span>
-				</div>
-		</div>
-		<div class="status-bar__column">
-			<i class="fas fa-clock"></i>
-			<i class="fas fa-cvolume-mute"></i>
-			<span class="statusbar__battery-level">100%</span>
-			<i class="fas fa-battery-full"></i>
-		</div>
-		<header class="header">
-			<div class="header__header-column">
-				<h1 class="hader__title">More</h1>
-			</div>
-			<div class="header__header-column">
-				<span class="header__icon">
-					<i class="fas fa-search"></i>
-				</span>
-				<span class="header__icon">
-					<i class="fas fa-qrcode"></i>
-				</span>
-				<span class="header__icon">
-					<a href="settings.html">
-						<i class="fas fa-cog"></i>
-					</a>
-				</span>
-			</div>
-		</header>
-			<main class="more">
-				<header class="more__header">
-					<li class="friednds__friend friend friend--lg">
-						<div class="friend__column">
-							<img src="images/man3.jpg" class="g-avatar">
-							<div class="freiend__content">
-							<span class="friend__name">
-								Niclolas
-							</span>
-							<span class="friend__status">
-								itnicolasme@gmail.com
-							</span>
-						</div>
-						<div class="friend__column">
-							<i class="far fa-comment-alt fa-2x"></i>
-						</div>
-					</div>
-					<ul class="more__btn-list">
-						<li class="more_btn">
-							<span class="more__btn-icon"><i class="far fa-smile fa-2x"></i></span>
-							<span class="more__btn-title">Emoticon</span>
-						</li>
-						<li class="more_btn">
-							<span class="more__btn-icon"><i class="fas fa-brush fa-2x"></i></span>
-							<span class="more__btn-title">Themes</span>
-						</li>
-						<li class="more_btn">
-							<span class="more__btn-icon"><i class="fab fa-kickstarter-k fa-2x"></i></span>
-							<span class="more__btn-title">Account</span>
-						</li>
-					</ul>
-				</header>
-				<section class="more__suggestions">
-					<ul class="more__suggestions-list">
-						<h5 class="more__title">Suggestions
-						</h5>
-						<li class="more_suggestions suggestions">
-							<span class="suggestion_icon"><i class="fas fa-quote-right fa-2x"></i></span>
-							<span class="suggestion__title">Kakao Story
-							</span>
-						</li>
-						<li class="more_suggestions suggestions">
-							<span class="suggestion_icon"><i class="fas fa-beer fa-2x"></i></span>
-							<span class="suggestion__title">
-							Kakao Friends</span>
-						</li>
-						<li class="more_suggestions suggestions">
-							<span class="suggestion_icon"><i class="fas fa-gamepad fa-2x"></i></span>
-							<span class="suggestion__title">Friends Gem
-							</span>
-						</li>
-					</ul>
-				</section>
-			</main>
-		<nav class="nav">
-				<ul class="nav__list">
-				<li class="nav__list-item">
-					<a href="friends.html"><i class="far fa-user"></i></a>
-				</li>
-				<li class="nav__list-item">
-					<a href="index.html"><i class="far fa-comment"></i></a>
-				</li>
-				<li class="nav__list-item">
-					<a href="find.html"><i class="fas fa-search"></i></a>
-				</li>
-				<li class="nav__list-item">
-					<a href="more.html"><i class="fas fa-ellipsis-h"></i></a>
-				</li>
-			</ul>
-		</nav>
-	</body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewprot" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/34238d14b4.js" crossorigin="anonymous"></script>
+    <title>More | Kakao Clone</title>
+</head>
+
+<body>
+    <div class="status-bar">
+        <div class="status-bar__column">
+            <span class="status-bar__clock">13:53</span>
+        </div>
+        <div class="status-bar__column">
+            <i class="fas fa-clock"></i>
+            <i class="fas fa-volume-mute"></i>
+            <i class="fas fa-wifi"></i>
+            <span class="status-bar__battery-level">100%</span>
+            <i class="fas fa-battery-full"></i>
+        </div>
+    </div>
+    <header class="header">
+        <div class="header__header-column">
+            <h1 class="header__title">More</h1>
+        </div>
+        <div class="header__header-column">
+            <span class="header__icon">
+                <i class="fas fa-search"></i>
+            </span>
+            <span class="header__icon">
+                <i class="fas fa-qrcode"></i>
+            </span>
+            <span class="header__icon">
+                <a href="settings.html">
+                    <i class="fas fa-cog"></i>
+                </a>
+            </span>
+        </div>
+    </header>
+    <main class="more">
+        <header class="more__header">
+            <li class="friednds__friend friend friend--lg">
+                <div class="friend__column">
+                    <img src="images/man3.jpg" class="g-avatar">
+                    <div class="freiend__content">
+                        <span class="friend__name">
+                            Niclolas
+                        </span>
+                        <span class="friend__status">
+                            itnicolasme@gmail.com
+                        </span>
+                    </div>
+                    <div class="friend__column">
+                        <i class="far fa-comment-alt fa-2x"></i>
+                    </div>
+                </div>
+                <ul class="more__btn-list">
+                    <li class="more_btn">
+                        <span class="more__btn-icon"><i class="far fa-smile fa-2x"></i></span>
+                        <span class="more__btn-title">Emoticon</span>
+                    </li>
+                    <li class="more_btn">
+                        <span class="more__btn-icon"><i class="fas fa-brush fa-2x"></i></span>
+                        <span class="more__btn-title">Themes</span>
+                    </li>
+                    <li class="more_btn">
+                        <span class="more__btn-icon"><i class="fab fa-kickstarter-k fa-2x"></i></span>
+                        <span class="more__btn-title">Account</span>
+                    </li>
+                </ul>
+        </header>
+        <section class="more__suggestions">
+            <ul class="more__suggestions-list">
+                <h5 class="more__title">Suggestions
+                </h5>
+                <li class="more_suggestions suggestions">
+                    <span class="suggestion_icon"><i class="fas fa-quote-right fa-2x"></i></span>
+                    <span class="suggestion__title">Kakao Story
+                    </span>
+                </li>
+                <li class="more_suggestions suggestions">
+                    <span class="suggestion_icon"><i class="fas fa-beer fa-2x"></i></span>
+                    <span class="suggestion__title">
+                        Kakao Friends</span>
+                </li>
+                <li class="more_suggestions suggestions">
+                    <span class="suggestion_icon"><i class="fas fa-gamepad fa-2x"></i></span>
+                    <span class="suggestion__title">Friends Gem
+                    </span>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__list-item">
+                <a href="friends.html" class="nav__list-iink"><i class="far fa-user"></i></a>
+            </li>
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-iink"><i class="far fa-comment"></i></a>
+            </li>
+            <li class="nav__list-item">
+                <a href="find.html" class="nav__list-iink"><i class="fas fa-search"></i></a>
+            </li>
+            <li class="nav__list-item">
+                <a href="more.html" class="nav__list-iink"><i class="fas fa-ellipsis-h"></i></a>
+            </li>
+        </ul>
+    </nav>
+</body>
+
 </html>
