#2.7 Friend Component part Two
Friend: Avatar & Status 통합 CSS 수정

--- a/friends.html
+++ b/friends.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-     <div class="status-bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">13:53</span>
         </div>
@@ -41,10 +41,10 @@
     </header>
     <main class="friends">
         <header class="friends__header">
-            <div class="friednds__friend friend  friend--lg">
+            <div class="friednds__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/man3.jpg" class="g-avatar">
-                    <div class="freiend__content">
+                    <img src="images/man3.jpg" class="friend__avatar g-avatar">
+                    <div class="friend__content">
                         <span class="friend__name">
                             Niclolas
                         </span>
@@ -55,12 +55,12 @@
                 </div>
             </div>
         </header>
-        <div class="freiend__plus">
-            <h5 class="friend__title">Plus Friend</h5>
-            <div class="friend__friend friend">
+        <div class="freiends__plus">
+            <h5 class="friends__title">Plus Friend</h5>
+            <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="images/plusfriend.png" class="g-avatar">
-                    <div class="freiend__content">
+                    <img src="images/plusfriend.png" class="friend__avatar">
+                    <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
                         </span>
@@ -70,21 +70,21 @@
         </div>
         <ul class="friend__list">
             <h5 class="friend__title">Friends 14</h5>
-            <li class="friednds__friend friend  friend--lg">
-                <div class="friend__column"></div>
-                <img src="images/man3.jpg" class="g-avatar">
-                <div class="freiend__content">
-                    <span class="friend__name">
-                        Niclolas
-                    </span>
-                    <span class="friend__status">
-                        Welcome to world
-                    </span>
-                </div>
+            <li class="friednd__friend friend friend--lg">
+                <div class="friend__column">
+	                <img src="images/woman3.jpeg" class="friend__avatar">
+	                <div class="friend__content">
+	                    <span class="friend__name">
+	                        Lynn
+	                    </span>
+	                    <span class="friend__status">
+	                        What a wonderful day!
+	                    </span>
+	                </div>
                 </div>
                 <div class="friend__column">
                     <div class="friend__now-listening">
-                        <span>GIRIBOY(Feat.suran)<i class="fas fa-play"></i></span>
+                        <span>기리보이 _ 빈집(Prod. By dnss)<i class="fas fa-play"></i></span>
                     </div>
                 </div>
             </li>
@@ -93,16 +93,19 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
-                <a href="friends.html" class="nav__list-iink"><i class="fas fa-user"></i></a>
+                <a href="friends.html" class="nav__list-link"><i class="fas fa-user"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="index.html" class="nav__list-iink"><i class="far fa-comment"></i></a>
+                <a href="index.html" class="nav__list-link">
+            		<div class="nav__badge">8</div>
+            		<i class="far fa-comment"></i>
+            	</a>
             </li>
             <li class="nav__list-item">
-                <a href="find.html" class="nav__list-iink"><i class="fas fa-search"></i></a>
+                <a href="find.html" class="nav__list-link"><i class="fas fa-search"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="more.html" class="nav__list-iink"><i class="fas fa-ellipsis-h"></i></a>
+                <a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a>
             </li>
         </ul>
     </nav>
