--- a/images/Find _ Kakao Clone.htm
+++ b/images/Find _ Kakao Clone.htm
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewprot" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie-edge" />
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/34238d14b4.js" crossorigin="anonymous"></script>
+<!-- saved from url=(0055)file:///Users/mac/Documents/study/kakao_clone/find.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="viewprot" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <link rel="stylesheet" href="./Find _ Kakao Clone_files/style.css">
+    <script src="./Find _ Kakao Clone_files/34238d14b4.js" crossorigin="anonymous"></script><link rel="stylesheet" href="./Find _ Kakao Clone_files/free.min.css" media="all"><link rel="stylesheet" href="./Find _ Kakao Clone_files/free-v4-font-face.min.css" media="all"><link rel="stylesheet" href="./Find _ Kakao Clone_files/free-v4-shims.min.css" media="all">
     <title>Find | Kakao Clone</title>
 </head>
 
@@ -16,11 +15,11 @@
             <span class="status-bar__clock">13:53</span>
         </div>
         <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-mute"></i>
-            <i class="fas fa-wifi"></i>
+            <i class="fas fa-clock" aria-hidden="true"></i>
+            <i class="fas fa-volume-mute" aria-hidden="true"></i>
+            <i class="fas fa-wifi" aria-hidden="true"></i>
             <span class="status-bar__battery-level">100%</span>
-            <i class="fas fa-battery-full"></i>
+            <i class="fas fa-battery-full" aria-hidden="true"></i>
         </div>
     </div>
     <header class="header">
@@ -29,13 +28,13 @@
         </div>
         <div class="header__header-column">
             <span class="header__icon">
-                <i class="fas fa-search"></i>
+                <i class="fas fa-search" aria-hidden="true"></i>
             </span>
             <span class="header__icon">
-                <i class="far fa-comment"></i>
+                <i class="far fa-comment" aria-hidden="true"></i>
             </span>
             <span class="header__icon">
-                <i class="fas fa-cog"></i>
+                <i class="fas fa-cog" aria-hidden="true"></i>
             </span>
         </div>
     </header>
@@ -44,7 +43,7 @@
             <ul class="find__deader-list">
                 <li class="find__header-btn header-btn">
                     <span class="header-btn__icon">
-                        <i class="fas fa-qrcode fa-2x"></i>
+                        <i class="fas fa-qrcode fa-2x" aria-hidden="true"></i>
                     </span>
                     <span class="header-btn__title">
                         QR Code
@@ -52,7 +51,7 @@
                 </li>
                 <li class="find__header-btn header-btn">
                     <span class="header-btn__icon">
-                        <i class="far fa-address-book fa-2x"></i>
+                        <i class="far fa-address-book fa-2x" aria-hidden="true"></i>
                     </span>
                     <span class="header-btn__title">
                         Add by Contacts
@@ -60,7 +59,7 @@
                 </li>
                 <li class="find__header-btn header-btn">
                     <span class="header-btn__icon">
-                        <i class="fas fa-passport fa-2x"></i>
+                        <i class="fas fa-passport fa-2x" aria-hidden="true"></i>
                     </span>
                     <span class="header-btn__title">
                         Add by ID
@@ -68,7 +67,7 @@
                 </li>
                 <li class="find__header-btn header-btn">
                     <span class="header-btn__icon">
-                        <i class="far fa-address-book fa-2x"></i>
+                        <i class="far fa-address-book fa-2x" aria-hidden="true"></i>
                     </span>
                     <span class="header-btn__title">
                         Invite
@@ -81,17 +80,17 @@
                 Recommended Friend
             </h5>
             <li class="find__friend friend friend--lg">
-                <div class="friend__column">
-                    <img src="images/man3.jpg" class="friend__avatar">
-                    <div class="friend__content">
+                <div class="find__column">
+                    <img src="./Find _ Kakao Clone_files/man3.jpg" class="g-avatar friend-avatar">
+                    <div class="find__content">
                         <span class="friend__name">
                             Niclolas
                         </span>
                     </div>
                 </div>
-                <div class="friend__column">
-                    <div class="friend__add-btn">
-                        <i class="fas fa-user-plus"></i>
+                <div class="find__column">
+                    <div class="find__add-btn">
+                        <i class="fas fa-user-plus" aria-hidden="true"></i>
                     </div>
                 </div>
             </li>
@@ -100,22 +99,19 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
-                <a href="friends.html" class="nav__list-link"><i class="far fa-user"></i></a>
+                <a href="file:///Users/mac/Documents/study/kakao_clone/friends.html" class="nav__list-link"><i class="far fa-user" aria-hidden="true"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="index.html" class="nav__list-link">
-                	<div class="nav__badge">8</div>
-                	<i class="far fa-comment"></i>
-                </a>
+                <a href="file:///Users/mac/Documents/study/kakao_clone/index.html" class="nav__list-link"><i class="far fa-comment" aria-hidden="true"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="find.html" class="nav__list-link"><i class="fas fa-search"></i></a>
+                <a href="file:///Users/mac/Documents/study/kakao_clone/find.html" class="nav__list-link"><i class="fas fa-search" aria-hidden="true"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a>
+                <a href="file:///Users/mac/Documents/study/kakao_clone/more.html" class="nav__list-link"><i class="fas fa-ellipsis-h" aria-hidden="true"></i></a>
             </li>
         </ul>
     </nav>
-</body>
 
-</html>
+
+</body></html>
