--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                    <div class="chat__column">
-                        <img class="chat__avatar g-avatar" src="images/woman3.jpeg">
-                        <div class="chat__content">
-                            <span class="chat__username">
-                                Lynn
-                            </span>
-                            <span class="chat__preview">Going home!</span>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="images/woman3.jpeg" class="friend__avatar m-avatar ">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going Home!
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat__column">
-                        <span class="chat__timestamp">Yesterday</span>
+                        <div class="friend__column">
+                            <span class="chat__timestamp">March 8</span>
+                        </div>
                     </div>
                 </a>
             </li>
@@ -65,13 +69,18 @@
                 <a href="friends.html" class="nav__list-iink"><i class="far fa-user"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="index.html" class="nav__list-iink"><i class="fas fa-comment"></i></a>
+                <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
+                    <i class="fas fa-comment"></i>
+                </a>
             </li>
             <li class="nav__list-item">
-                <a href="find.html" class="nav__list-iink"><i class="fas fa-search"></i></a>
+                <a href="find.html" class="nav__list-link">
+                    <i class="fas fa-search"></i>
+                </a>
             </li>
             <li class="nav__list-item">
-                <a href="more.html" class="nav__list-iink"><i class="fas fa-ellipsis-h"></i></a>
+                <a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a>
             </li>
         </ul>
     </nav>
