--- a/more.html
+++ b/more.html
@@ -45,8 +45,8 @@
         <header class="more__header">
             <li class="friednds__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/man3.jpg" class="g-avatar">
-                    <div class="freiend__content">
+                    <img src="images/man3.jpg" class="g-avatar friend__avatar">
+                    <div class="friend__content">
                         <span class="friend__name">
                             Niclolas
                         </span>
@@ -54,24 +54,25 @@
                             itnicolasme@gmail.com
                         </span>
                     </div>
-                    <div class="friend__column">
-                        <i class="far fa-comment-alt fa-2x"></i>
-                    </div>
                 </div>
-                <ul class="more__btn-list">
-                    <li class="more_btn">
-                        <span class="more__btn-icon"><i class="far fa-smile fa-2x"></i></span>
-                        <span class="more__btn-title">Emoticon</span>
-                    </li>
-                    <li class="more_btn">
-                        <span class="more__btn-icon"><i class="fas fa-brush fa-2x"></i></span>
-                        <span class="more__btn-title">Themes</span>
-                    </li>
-                    <li class="more_btn">
-                        <span class="more__btn-icon"><i class="fab fa-kickstarter-k fa-2x"></i></span>
-                        <span class="more__btn-title">Account</span>
-                    </li>
-                </ul>
+                <div class="friend__column">
+                    <i class="far fa-comment-alt"></i>
+                </div>
+            </li>
+            <ul class="more__btn-list">
+                <li class="more_btn">
+                    <span class="more__btn-icon"><i class="far fa-smile fa-2x"></i></span>
+                    <span class="more__btn-title">Emoticon</span>
+                </li>
+                <li class="more_btn">
+                    <span class="more__btn-icon"><i class="fas fa-brush fa-2x"></i></span>
+                    <span class="more__btn-title">Themes</span>
+                </li>
+                <li class="more_btn">
+                    <span class="more__btn-icon"><i class="fab fa-kickstarter-k fa-2x"></i></span>
+                    <span class="more__btn-title">Account</span>
+                </li>
+            </ul>
         </header>
         <section class="more__suggestions">
             <ul class="more__suggestions-list">
@@ -98,16 +99,16 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
-                <a href="friends.html" class="nav__list-iink"><i class="far fa-user"></i></a>
+                <a href="friends.html" class="nav__list-link"><i class="far fa-user"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="index.html" class="nav__list-iink"><i class="far fa-comment"></i></a>
+                <a href="index.html" class="nav__list-link"><i class="far fa-comment"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="find.html" class="nav__list-iink"><i class="fas fa-search"></i></a>
+                <a href="find.html" class="nav__list-link"><i class="fas fa-search"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="more.html" class="nav__list-iink"><i class="fas fa-ellipsis-h"></i></a>
+                <a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a>
             </li>
         </ul>
     </nav>
