--- a/friends.html
+++ b/friends.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </header>
-        <div class="freiends__plus">
+        <div class="friends__plus">
             <h5 class="friends__title">Plus Friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
@@ -68,9 +68,9 @@
                 </div>
             </div>
         </div>
-        <ul class="friend__list">
-            <h5 class="friend__title">Friends 14</h5>
-            <li class="friednd__friend friend friend--lg">
+        <ul class="friends__list">
+            <h5 class="friends__title">Friends 14</h5>
+            <li class="friednd__friend friend">
                 <div class="friend__column">
 	                <img src="images/woman3.jpeg" class="friend__avatar">
 	                <div class="friend__content">
@@ -82,8 +82,8 @@
 	                    </span>
 	                </div>
                 </div>
-                <div class="friend__column">
-                    <div class="friend__now-listening">
+                <div class="friends__column">
+                    <div class="friends__now-listening">
                         <span>기리보이 _ 빈집(Prod. By dnss)<i class="fas fa-play"></i></span>
                     </div>
                 </div>
