--- a/chat.html
+++ b/chat.html
@@ -10,7 +10,7 @@
     <title>Chat | Kakao Clone</title>
 </head>
 
-<body>
+<body class="chats-body">
     <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">13:53</span>
@@ -40,32 +40,46 @@
             </span>
         </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">Friday, January 11, 2019</span>
             <li class="incoming-message message">
-                <img src="images/woman3.jpeg" class="friend__avatar g-avatar">
+                <img src="images/woman3.jpeg" class="m-avatar message__avatar">
                 <div class="message__content">
-                    <span class="message__author">Best Friend</span>
-                    <div class="message__bubble">
+                    <span class="message__bubble">
                         Congrates I love you
-                    </div>
+                    </span>
+                    <span class="message__author">Best Friend</span>
                 </div>
-                <span class="message__timestamp"></span>
+            </li>
+            <li class="sent-message message">
+                <div class="message__content">
+                    <span class="message__bubble">
+                        Thank you see you soon!
+                    </span>
+                </div>
             </li>
             <li class="incoming-message message">
-                <span class="message__timestamp"></span>
+                <img src="images/woman3.jpeg" class="m-avatar message__avatar">
                 <div class="message__content">
-                    <div class="message__bubble">
-                        Thx XD
-                    </div>
+                    <span class="message__bubble">
+                        Congrates I love you
+                    </span>
+                    <span class="message__author">Best Friend</span>
+                </div>
+            </li>
+            <li class="sent-message message">
+                <div class="message__content">
+                    <span class="message__bubble">
+                        Thank you see you soon!
+                    </span>
                 </div>
             </li>
         </ul>
     </main>
     <div class="chat__write">
         <div class="chat__write-column">
-            <i class="far fa-plus-squar"></i>
+            <i class="far fa-plus-square"></i>
         </div>
         <div class="chat__write-column">
             <input type="text" placeholder="send message" class="chat__write-input">
