--- a/more.html
+++ b/more.html
@@ -60,36 +60,35 @@
                 </div>
             </li>
             <ul class="more__btn-list">
-                <li class="more_btn">
+                <li class="more__btn">
                     <span class="more__btn-icon"><i class="far fa-smile fa-2x"></i></span>
                     <span class="more__btn-title">Emoticon</span>
                 </li>
-                <li class="more_btn">
+                <li class="more__btn">
                     <span class="more__btn-icon"><i class="fas fa-brush fa-2x"></i></span>
                     <span class="more__btn-title">Themes</span>
                 </li>
-                <li class="more_btn">
+                <li class="more__btn">
                     <span class="more__btn-icon"><i class="fab fa-kickstarter-k fa-2x"></i></span>
                     <span class="more__btn-title">Account</span>
                 </li>
             </ul>
         </header>
         <section class="more__suggestions">
+        	<h5 class="more__title">Suggestions</h5>
             <ul class="more__suggestions-list">
-                <h5 class="more__title">Suggestions
-                </h5>
-                <li class="more_suggestions suggestions">
-                    <span class="suggestion_icon"><i class="fas fa-quote-right fa-2x"></i></span>
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion_icon"><i class="fas fa-quote-right"></i></span>
                     <span class="suggestion__title">Kakao Story
                     </span>
                 </li>
-                <li class="more_suggestions suggestions">
-                    <span class="suggestion_icon"><i class="fas fa-beer fa-2x"></i></span>
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion_icon"><i class="fas fa-beer"></i></span>
                     <span class="suggestion__title">
                         Kakao Friends</span>
                 </li>
-                <li class="more_suggestions suggestions">
-                    <span class="suggestion_icon"><i class="fas fa-gamepad fa-2x"></i></span>
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion_icon"><i class="fas fa-gamepad"></i></span>
                     <span class="suggestion__title">Friends Gem
                     </span>
                 </li>
