part3_미디어쿼리
min-width를 초과하면 커버를 씌움

--- a/friends.html
+++ b/friends.html
@@ -72,15 +72,15 @@
             <h5 class="friends__title">Friends 14</h5>
             <li class="friednd__friend friend">
                 <div class="friend__column">
-	                <img src="images/woman3.jpeg" class="friend__avatar">
-	                <div class="friend__content">
-	                    <span class="friend__name">
-	                        Lynn
-	                    </span>
-	                    <span class="friend__status">
-	                        What a wonderful day!
-	                    </span>
-	                </div>
+                    <img src="images/woman3.jpeg" class="friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Lynn
+                        </span>
+                        <span class="friend__status">
+                            What a wonderful day!
+                        </span>
+                    </div>
                 </div>
                 <div class="friends__column">
                     <div class="friends__now-listening">
@@ -97,9 +97,9 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
-            		<div class="nav__badge">8</div>
-            		<i class="far fa-comment"></i>
-            	</a>
+                    <div class="nav__badge">8</div>
+                    <i class="far fa-comment"></i>
+                </a>
             </li>
             <li class="nav__list-item">
                 <a href="find.html" class="nav__list-link"><i class="fas fa-search"></i></a>
@@ -110,5 +110,8 @@
         </ul>
     </nav>
 </body>
+<div class="bigScreen">
+    <span class="bigScreesn__text">Please make your screen small!</span>
+</div>
 
 </html>
