--- a/more.html
+++ b/more.html
@@ -75,7 +75,7 @@
             </ul>
         </header>
         <section class="more__suggestions">
-        	<h5 class="more__title">Suggestions</h5>
+            <h5 class="more__title">Suggestions</h5>
             <ul class="more__suggestions-list">
                 <li class="more__suggestion suggestion">
                     <span class="suggestion_icon"><i class="fas fa-quote-right"></i></span>
@@ -112,5 +112,8 @@
         </ul>
     </nav>
 </body>
+<div class="bigScreen">
+    <span class="bigScreesn__text">Please make your screen small!</span>
+</div>
 
 </html>
