--- a/chat.html
+++ b/chat.html
@@ -91,5 +91,7 @@
         </div>
     </div>
 </body>
-
+<div class="bigScreen">
+    <span class="bigScreesn__text">Please make your screen small!</span>
+</div>
 </html>
