--- a/find.html
+++ b/find.html
@@ -117,5 +117,7 @@
         </ul>
     </nav>
 </body>
-
+<div class="bigScreen">
+    <span class="bigScreesn__text">Please make your screen small!</span>
+</div>
 </html>
