--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             </li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreesn__text">Please make your screen small!</span>
+    </div>
 </body>
 
 </html>
