--- a/settings.html
+++ b/settings.html
@@ -75,5 +75,8 @@
         </section>
     </main>
 </body>
+<div class="bigScreen">
+    <span class="bigScreesn__text">Please make your screen small!</span>
+</div>
 
 </html>
