part3_add emoji
커버화면에 이모지 추가

--- a/chat.html
+++ b/chat.html
@@ -92,6 +92,6 @@
     </div>
 </body>
 <div class="bigScreen">
-    <span class="bigScreesn__text">Please make your screen small!</span>
+    <span class="bigScreesn__text">Please make your screen small!🤯</span>
 </div>
 </html>
