--- a/settings.html
+++ b/settings.html
@@ -76,7 +76,7 @@
     </main>
 </body>
 <div class="bigScreen">
-    <span class="bigScreesn__text">Please make your screen small!</span>
+    <span class="bigScreesn__text">Please make your screen small!🤯</span>
 </div>
 
 </html>
