--- a/find.html
+++ b/find.html
@@ -118,6 +118,6 @@
     </nav>
 </body>
 <div class="bigScreen">
-    <span class="bigScreesn__text">Please make your screen small!</span>
+    <span class="bigScreesn__text">Please make your screen small!🤯</span>
 </div>
 </html>
