--- a/friends.html
+++ b/friends.html
@@ -111,7 +111,7 @@
     </nav>
 </body>
 <div class="bigScreen">
-    <span class="bigScreesn__text">Please make your screen small!</span>
+    <span class="bigScreesn__text">Please make your screen small!🤯</span>
 </div>
 
 </html>
