--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </ul>
     </nav>
     <div class="bigScreen">
-        <span class="bigScreesn__text">Please make your screen small!</span>
+        <span class="bigScreesn__text">Please make your screen small!🤯</span>
     </div>
 </body>
 
