--- a/more.html
+++ b/more.html
@@ -113,7 +113,7 @@
     </nav>
 </body>
 <div class="bigScreen">
-    <span class="bigScreesn__text">Please make your screen small!</span>
+    <span class="bigScreesn__text">Please make your screen small!🤯</span>
 </div>
 
 </html>
