--- a/friends.html
+++ b/friends.html
@@ -41,7 +41,7 @@
     </header>
     <main class="friends">
         <header class="friends__header">
-            <div class="friednds__friend friend friend--lg">
+            <div class="friends__friend friend friend--lg">
                 <div class="friend__column">
                     <img src="images/man3.jpg" class="friend__avatar g-avatar">
                     <div class="friend__content">
@@ -69,16 +69,48 @@
             </div>
         </div>
         <ul class="friends__list">
-            <h5 class="friends__title">Friends 14</h5>
-            <li class="friednd__friend friend">
+            <h5 class="friends__title">Friends 3</h5>
+            <li class="friends__friend friend">
                 <div class="friend__column">
                     <img src="images/woman3.jpeg" class="friend__avatar">
                     <div class="friend__content">
+                        <a href="chat.html"><span class="friend__name">
+                                Lynn
+                            </span>
+                            <span class="friend__status">
+                                What a wonderful day!
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                </div>
+                <div class="friends__column">
+                </div>
+            </li>
+            <li class="friend__friend friend">
+                <div class="friend__column">
+                    <img src="images/man2.jpeg" class="friend__avatar">
+                    <div class="friend__content">
                         <span class="friend__name">
-                            Lynn
+                            David
                         </span>
                         <span class="friend__status">
-                            What a wonderful day!
+                            Way back Home🎶
+                        </span>
+                    </div>
+                </div>
+                <div class="friends__column">
+                </div>
+            </li>
+            <li class="friend__friend friend">
+                <div class="friend__column">
+                    <img src="images/woman2.jpeg" class="friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Rossa
+                        </span>
+                        <span class="friend__status">
+                            what's up
                         </span>
                     </div>
                 </div>
