--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Chats | Kakao Clone</title>
 </head>
 
-<body>
+<body class="">
     <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">13:53</span>
@@ -55,11 +55,34 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="friend__column">
-                            <span class="chat__timestamp">March 8</span>
+                        <div class="friend__column time">
+                            <span class="chat__timestamp">January 11</span>
+                            <div class="chat__badge">2</div>
                         </div>
                     </div>
                 </a>
+            </li>
+            <li class="chats__chat">
+                <div class="chats__chat friend friend--lg">
+                    <div class="friend__column grid">
+                        <div class="friend__column grid">
+                            <img src="images/woman3.jpeg" class="friend__avatar m-avatar">
+                            <img src="images/man2.jpeg" class="friend__avatar m-avatar">
+                        </div>
+                        <div class="friend__content">
+                            <span class="friend__name">
+                                BF forever!
+                            </span>
+                            <span class="friend__bottom-text">
+                                XD
+                            </span>
+                        </div>
+                    </div>
+                    <div class="friend__column time">
+                        <span class="chat__timestamp">January 11</span>
+                        <div class="chat__badge">6</div>
+                    </div>
+                </div>
             </li>
         </ul>
     </main>
