--- a/chat.html
+++ b/chat.html
@@ -34,10 +34,7 @@
                     <i class="fas fa-search"></i>
                 </span>
                 <span class="header__icon">
-                    <i class="far fa-comment"></i>
-                </span>
-                <span class="header__icon">
-                    <i class="fas fa-cog"></i>
+                    <i class="fas fa-bars"></i>
                 </span>
             </div>
         </header>
@@ -49,7 +46,7 @@
                 <img src="images/woman3.jpeg" class="m-avatar message__avatar">
                 <div class="message__content">
                     <span class="message__bubble">
-                        Congrates I love you
+                        Congrates I love you🥰
                     </span>
                     <span class="message__author">Best Friend</span>
                 </div>
@@ -65,7 +62,7 @@
                 <img src="images/woman3.jpeg" class="m-avatar message__avatar">
                 <div class="message__content">
                     <span class="message__bubble">
-                        Congrates I love you
+                        Where're you?
                     </span>
                     <span class="message__author">Best Friend</span>
                 </div>
@@ -73,8 +70,26 @@
             <li class="sent-message message">
                 <div class="message__content">
                     <span class="message__bubble">
-                        Thank you see you soon!
+                        in my office
                     </span>
+                </div>
+            </li>
+            <li class="incoming-message message">
+                <img src="images/woman3.jpeg" class="m-avatar message__avatar">
+                <div class="message__content">
+                    <span class="message__bubble">
+                        Don't forget to bring my key~
+                    </span>
+                    <span class="message__author">Best Friend</span>
+                </div>
+            </li>
+            <li class="incoming-message message">
+                <img src="images/woman3.jpeg" class="m-avatar message__avatar">
+                <div class="message__content">
+                    <span class="message__bubble">
+                        👻
+                    </span>
+                    <span class="message__author">Best Friend</span>
                 </div>
             </li>
         </ul>
@@ -94,4 +109,5 @@
 <div class="bigScreen">
     <span class="bigScreesn__text">Please make your screen small!🤯</span>
 </div>
+
 </html>
