--- a/find.html
+++ b/find.html
@@ -82,10 +82,10 @@
             </h5>
             <li class="find__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/man3.jpg" class="friend__avatar">
+                    <img src="images/man4.jpeg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Niclolas
+                            Timmy
                         </span>
                     </div>
                 </div>
