--- a/find.html
+++ b/find.html
@@ -32,10 +32,9 @@
                 <i class="fas fa-search"></i>
             </span>
             <span class="header__icon">
-                <i class="far fa-comment"></i>
-            </span>
-            <span class="header__icon">
-                <i class="fas fa-cog"></i>
+                <a href="settings.html">
+                    <i class="fas fa-cog"></i>
+                </a>
             </span>
         </div>
     </header>
@@ -104,8 +103,8 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
-                	<div class="nav__badge">8</div>
-                	<i class="far fa-comment"></i>
+                    <div class="nav__badge">8</div>
+                    <i class="far fa-comment"></i>
                 </a>
             </li>
             <li class="nav__list-item">
@@ -120,4 +119,5 @@
 <div class="bigScreen">
     <span class="bigScreesn__text">Please make your screen small!🤯</span>
 </div>
+
 </html>
