--- a/friends.html
+++ b/friends.html
@@ -32,10 +32,9 @@
                 <i class="fas fa-search"></i>
             </span>
             <span class="header__icon">
-                <i class="far fa-comment"></i>
-            </span>
-            <span class="header__icon">
+                 <a href="settings.html">
                 <i class="fas fa-cog"></i>
+            </a>
             </span>
         </div>
     </header>
