--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 <i class="far fa-comment"></i>
             </span>
             <span class="header__icon">
+                 <a href="settings.html">
                 <i class="fas fa-cog"></i>
+            </a>
             </span>
         </div>
     </header>
