--- a/settings.html
+++ b/settings.html
@@ -32,28 +32,23 @@
             <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <span class="header__icon">
-                <i class="far fa-comment"></i>
-            </span>
-            <span class="header__icon">
-                <i class="fas fa-cog"></i>
-            </span>
         </div>
     </header>
     <main class="settings">
         <section class="settings__sections">
             <ul class="settings__list">
                 <li class="settings__setting">
-                    <span class="settings__icon"></span>
+                    <span class="settings__icon"><i class="fas fa-bullhorn"></i></span>
                     <span class="settings__title">Notice</span>
                 </li>
                 <li class="settings__setting">
-                    <span class="settings__icon"></span>
+                    <span class="settings__icon"><i class="fas fa-flask"></i></span>
                     <span class="settings__title">Kakao Lab</span>
                 </li>
                 <li class="settings__setting">
-                    <span class="settings__icon"></span>
+                    <span class="settings__icon"><i class="fas fa-info-circle"></i></span>
                     <span class="settings__title">Version</span>
+                    <span class="settings__version">8.2.7</span>
                 </li>
             </ul>
         </section>
@@ -70,6 +65,34 @@
                 <li class="settings__setting">
                     <span class="settings__icon"><i class="far fa-user"></i></span>
                     <span class="settings__title">Friends</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="far fa-comment"></i></span>
+                    <span class="settings__title">Chats</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="fas fa-sms"></i></span>
+                    <span class="settings__title">SMS Messages</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="fas fa-adjust"></i></span>
+                    <span class="settings__title">Display</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="fas fa-brush"></i></span>
+                    <span class="settings__title">Themes</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="fas fa-ellipsis-h"></i></span>
+                    <span class="settings__title">Advanced Features</span>
+                </li>
+            </ul>
+        </section>
+        <section class="settings__sections">
+            <ul class="settings__list">
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="far fa-question-circle"></i></span>
+                    <span class="settings__title">Support</span>
                 </li>
             </ul>
         </section>
